# mjc284_fsm_processor

./: README.md
circuit/: FSM_Processor.dig  notes.txt
karnaugh_maps/: FSM_Karnaugh.xlsx
src/: counter.v  counter_rst.v  counter_rst.v.bak  fsm_processor.v  fsm_processor.v.bak  main.v  main.v.bak  seven_seg.v  state_controller.v
src/hardware/: counter.v.bak  dummy_load.v  dummy_load.v.bak  main.v  state_controller.v  state_controller.v.bak
src/hardware/ram/: program.mif  ram.bsf  ram.cmp  ram.qip  ram.v  ram.v.bak  ram_bb.v  ram_inst.v
src/hardware/spi_modules/: spi_counter.v  spi_output.v  spi_output.v.bak  spi_register.v
src/ram/: program.mif  ram.inc  ram.v
src/software/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  assembler copy.cpp  assembler.cpp  assembler.out  blinky.ssdf  cmake_install.cmake  compiler.cpp  disassembler.cpp  mif_generator.cpp  out.asm  out.mif  sample_assembly.txt  samples.mif  test.cpp  tmp.cpp
src/software/demo/asm_blinky/: asm_blinky.asm  program.mif  sample_assembly.txt  script.sh
src/software/demo/blinky/: blinky.asm  blinky.ssdf  program.mif  script.sh
src/software/demo/led_animation/: led_animation.asm  led_animation.ssdf  program.mif  script.sh
src/software/src/: assembler.cpp  compiler.cpp  disassembler.cpp  mif_generator.cpp
src/spi_modules/: spi_counter.v  spi_counter.v.bak  spi_output.v
